Removing addition of z-index to #page element that was added for blob solutions that is not needed anymore and caused issue #95

--- a/assets/styles/components/_base.scss
+++ b/assets/styles/components/_base.scss
@@ -56,12 +56,6 @@ body {
   }
 }
 
-// Page container
-#page {
-  z-index: 1;
-  position: relative;
-}
-
 // Canvas of blobs
 #blobs {
   top: 0;
